deploy/k8s/overlays/dev/pywb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pywb
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-buffers: "4 16k"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - veidemann.test
      secretName: veidemann-tls
  rules:
    - host: veidemann.test
      http:
        paths:
          - path: /pywb
            pathType: Prefix
            backend:
              service:
                name: pywb
                port:
                  number: 8080
